--- a/src/components/Navigation/SideDrawer/SideDrawer.module.scss
+++ b/src/components/Navigation/SideDrawer/SideDrawer.module.scss
@@ -1,4 +1,4 @@
-SideDrawer {
+.SideDrawer {
     position: fixed;
     width: 280px;
     max-width: 70%;
@@ -10,20 +10,18 @@ SideDrawer {
     padding: 32px 16px;
     box-sizing: border-box;
     transition: transform .3s ease-out;
+    &.Open {
+        transform: translateX(0);
+    }
+    &.Close {
+        transform: translateX(-100%);
+    }
 }
 
 @media (min-width: 500px) {
     .SideDrawer {
         display: none;
     }
-}
-
-.Open {
-    transform: translateX(0);
-}
-
-.Close {
-    transform: translateX(-100%);
 }
 
 .Logo {
