--- a/src/components/Order/Order.module.scss
+++ b/src/components/Order/Order.module.scss
@@ -6,3 +6,11 @@
     margin: 10px auto;
     box-sizing: border-box;
 }
+
+.Ingredient {
+    text-transform: capitalize;
+    padding: 5px 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    margin: 0 8px;
+}
